commented out references to additional Models at this time

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,9 +8,9 @@
 <!--<p>
   <b>Teams</b><br />
   <ul>
-  <% @user.teams.each do |team| %> 
-  	<li><%= team.teamname %></li>
-  <% end %>
+  <% #@user.teams.each do |team| %> 
+  	<li><%= #team.teamname %></li>
+  <% #end %>
 </p>-->
 
 
