--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,10 @@
 </head>
 <body>
 
+<% if session[:user_id] %>
+Logged in as: <%= User.find(session[:user_id]).username %> -- <%= link_to "Logout", "/logout" %>
+<% end %>
+
 <%= yield %>
 
 </body>
