done for the night! almost done with User able to create new Team. having trouble with the joining class creation method

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,11 @@
 </head>
 <body>
 
+<h1>Battlefork</h1>
+
 <% if session[:user_id] %>
-Logged in as: <%= User.find(session[:user_id]).username %> -- <%= link_to "Logout", "/logout" %>
+Logged in as: <%= User.find(session[:user_id]).username %><br />
+<%= link_to "My Profile", user_path(User.find(session[:user_id])) %> | <%= link_to "Logout", logout_path %>
 <% end %>
 
 <%= yield %>
