--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,17 @@
   <%= @user.username %>
 </p>
 
-<% if @user.id == session[:user_id] %>
-<%= link_to 'Edit', edit_user_path(@user) %> |
+<p>
+	<b>Teams</b><br />
+	<ul>
+	<% @user.teams.each do |t| %>
+		<li><%= t.teamname %></li>
+	<% end %>
+	</ul>
+</p>
+
+<% if @user_matches_session %>
+<%= link_to 'Edit Profile', edit_user_path(@user) %> |
+<%= link_to 'Create New Team', new_team_path %>
 <% end %>
-<%= link_to 'Back', users_path %>
+
