made some final tweaks to adding/removing team members. will target v2 for more realistic inviting of users to teams. merging this branch back into master

--- a/app/views/teams/invite.html.erb
+++ b/app/views/teams/invite.html.erb
@@ -9,13 +9,11 @@
   <tr>
     <th>Username</th>
     <th></th>
-    <th></th>
   </tr>
 
 <% @inviteable_users.each do |user| %>
   <tr>
-    <td><%= user.username %></td>
-    <td><%= link_to 'Show', user %></td>
+    <td><%= link_to user.username, user %></td>
     <td><%= button_to 'Add Member', :action => 'add_member', :controller => 'teams', :team_id => @team.id, :add_member_id => user.id %>
   </tr>
 <% end %>
