basic team-match relationship is in. team captain can make a new Match and select a team

--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -24,8 +24,23 @@
 	</ul>
 </p>
 
+<p>
+	<b>Matches:</b>
+	<table border="1" style="text-align: center">
+		<th>Opponent</th>
+		<th>W/L</th>
+		
+		<% @team.matches.each do |m| %>
+		<tr>
+			<td width="100"><%= link_to m.get_other_team(@team.id).teamname, m.get_other_team(@team.id) %></td>
+			<td><%= m.winner(@team.id) %></td>
+		</tr>
+		<% end %>
+	</table>
+
 
 <% if session[:user_id] == @team.captain_user_id %>
+<%= button_to 'Start New Match', :action => 'opponents', :controller => 'teams', :team_id => @team.id %>
 <%= button_to 'Invite New Members', :action => 'invite', :controller => 'teams', :team_id => @team.id %>
 <%= button_to 'Edit Team Details', edit_team_path(@team), :method => :get %>
 <%= button_to 'Disband', @team, :confirm => "Disband '#{@team.teamname}'? This cannot be undone.", :method => :delete %>
