--- a/app/views/battles/show.html.erb
+++ b/app/views/battles/show.html.erb
@@ -5,6 +5,10 @@
   <%= @battle.match_id %>
 </p>
 
+<% @battle.users.each do |u| %>
+participant: <%= u.username %><br />
+<% end %>
+
 
 <%= link_to 'Edit', edit_battle_path(@battle) %> |
 <%= link_to 'Back', battles_path %>
