happy with match-battle relationship. can create battles through the match properly. ready to replace the generating battles code based on the orders submit by team captains.  next: add list of battles to user's profile then merge this branch into master

--- a/app/views/battles/_battle.html.erb
+++ b/app/views/battles/_battle.html.erb
@@ -1,4 +1,6 @@
 <% players = battle.get_all_participants %>
-<li>
-	<%= players[0] %> -- <%= players[1] %> -- <%= battle.team_winner_to_s %>
-</li>
+<div id="battle[<%= battle_counter %>]" class="<%= battle_counter.odd? ? 'oddline' : 'evenline' %>">
+	<div style="width: 125px; float: left;"><%= players[0] %></div>
+	<div style="width: 125px; float: left;"><%= players[1] %></div>
+	<div style="width: 150px; float: left;"><%= battle.team_winner_to_s %></div>
+</div>
