added a bunch of models and joiners for the map and locations aspect of the match.  hard-coded the map grid for now. placeholder map grid displays on Match screen, which should be easy to replace with images. next: initialize players to their team's capital on match start

--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -5,6 +5,9 @@
 
 <h3><%= team1.teamname %> VS <%= team2.teamname %></h3>
 
+<div id="map">
+	<%= render(@match.map) %>
+</div>
 
 <div id="roster">
 	<% @match.teams.each do |t| %>
