added code to create user_locations on match start, sets players to their team's homeworld. hard coded locations 'alpha' and 'papa' to be the starting homeworlds for now. needs testing but i'm out of time on the airplane

--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -25,6 +25,13 @@
 <br clear="all" />
 <br />
 
+<b>User Locations</b>
+<% @match.teams.each do |t| %>
+	<% t.users.each do |u| %>
+		<%= u.get_user_location_for_match(@match).name %>
+	<% end %>
+<% end %>
+
 <b>Battle Log</b>
 <div id="battles-header">
 	<div style="width: 125px; float: left;"><%= team1.teamname %> Players</div>
