by jove, I've done it. on match creation, a map is setup with default locations and players are initialized to their starting homeworlds! last two major steps: 1) add dropdowns for team captains to issue orders to their players based  on the player's current location 2) rewrite the generate battles method to evaluate locations for players  of opposing teams stationed there

--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <% team1 = @match.teams.first %>
-<% team2 = @match.get_other_team(@match.teams.first) %>
+<% team2 = @match.get_other_team %>
 
 <h3><%= team1.teamname %> VS <%= team2.teamname %></h3>
 
