fixed broken migration for location_links added map images to public/images added drop downs next to each player that have all possible orders
next:
add some way to track when a user has an order
only show dropdowns when all battles are complete && user has no order

--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -13,10 +13,17 @@
 	<% @match.teams.each do |t| %>
 	<div id="teamroster" style="float: left;">
 		<b><%= t.teamname %></b><br/>
-		<%= User.find(t.captain_user_id).username %> <em>(Captain)</em><br />
+		<% team_captain = User.find(t.captain_user_id) %>
+		<%= team_captain.username %> <em>(Captain)</em>
+		<% connected_locations = team_captain.get_user_location_for_match(@match).get_all_connected_locations %>
+		<%= collection_select(:team_captain, :username, connected_locations, :id, :name) %>
+		<br />
 		<% t.users.each do |u| %>
 			<% if u.id != t.captain_user_id %>
-				<%= u.username %><br />
+				<%= u.username %>
+				<% connected_locations = u.get_user_location_for_match(@match).get_all_connected_locations %>
+				<%= collection_select(:u, :username, connected_locations, :id, :name) %>		
+				<br />
 			<% end %>
 		<% end %>
 	<% end %>
