--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -32,7 +32,7 @@
 		
 		<% @team.matches.each do |m| %>
 		<tr>
-			<td width="100"><%= link_to m.get_other_team(@team.id).teamname, m.get_other_team(@team.id) %></td>
+			<td width="100"><%= link_to m.get_other_team.teamname, m.get_other_team %></td>
 			<td><%= link_to m.winner(@team.id), match_path(m) %></td>
 		</tr>
 		<% end %>
