--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -3,41 +3,43 @@
 <% team1 = @match.teams.first %>
 <% team2 = @match.get_other_team %>
 
-<h3><%= team1.teamname %> VS <%= team2.teamname %></h3>
+<h3 style="text-align: center">
+<span style="color: red"><%= team1.teamname %></span>
+ VS 
+<span style="color: blue"><%= team2.teamname %></span>
+</h3>
 
-<div id="map">
+<div id="map" style="float: left; margin-right: 10px">
 	<%= render(@match.map) %>
 </div>
 
-<div id="roster">
+<%= form_for :match, @match, :url => generate_orders_url(:id => @match.id) do |f| %>
+<div id="roster" style="float: left;">
 	<% @match.teams.each do |t| %>
 	<div id="teamroster" style="float: left;">
 		<b><%= t.teamname %></b><br/>
-		<% team_captain = User.find(t.captain_user_id) %>
-		<%= team_captain.username %> <em>(Captain)</em>
-		<% connected_locations = team_captain.get_user_location_for_match(@match).get_all_connected_locations %>
-		<%= collection_select(:team_captain, :username, connected_locations, :id, :name) %>
-		<br />
 		<% t.users.each do |u| %>
-			<% if u.id != t.captain_user_id %>
-				<%= u.username %>
-				<% connected_locations = u.get_user_location_for_match(@match).get_all_connected_locations %>
-				<%= collection_select(:u, :username, connected_locations, :id, :name) %>		
-				<br />
+			<%= u.username %>
+			<% if u.id == t.captain_user_id %>
+				<em>(Captain)</em>
 			<% end %>
+			<% if @match.is_user_a_captain_of_this_team?(session[:user_id], t.id) && !@match.does_user_have_next_location?(u) && @match.all_battles_complete? %>
+				<% connected_locations = u.get_user_location_for_match(@match).get_all_connected_locations %>
+				<%= collection_select("user_order", u.id, connected_locations, :id, :name) %>	
+			<% end %>
+			<br />			
 		<% end %>
 	<% end %>
 	</div>
 </div>
 <br clear="all" />
 <br />
-
-<b>User Locations</b>
-<% @match.teams.each do |t| %>
-	<% t.users.each do |u| %>
-		<%= u.get_user_location_for_match(@match).name %>
-	<% end %>
+<% if @match.is_user_a_captain?(session[:user_id]) %>
+	<%= submit_tag "Submit Orders" %>
 <% end %>
+<% end %>
+
+<br /><br />
 
 <b>Battle Log</b>
 <div id="battles-header">
@@ -50,9 +52,7 @@
 <%= render(@match.battles) %>
 <br/>
 
-<% if @match.all_battles_complete? && @match.is_user_a_captain?(session[:user_id]) %>
-	<%= button_to "Generate Battles", matches_generate_battles_path(:match => @match) %>
-<% end %>
+
 </div>
 <br /><br />
 Started on <%= @match.get_created_timestamp %><br /><br />
