only a user involved in a battle or the user's team captain can report the winner

--- a/app/views/battles/_battle.html.erb
+++ b/app/views/battles/_battle.html.erb
@@ -2,5 +2,11 @@
 <div id="battle[<%= battle_counter %>]" class="<%= battle_counter.odd? ? 'oddline' : 'evenline' %>">
 	<div style="width: 125px; float: left;"><%= players[0] %></div>
 	<div style="width: 125px; float: left;"><%= players[1] %></div>
-	<div style="width: 150px; float: left;"><%= battle.team_winner_to_s %></div>
+	<div style="width: 150px; float: left;">
+		<% if battle.is_user_allowed_to_report_winner(session[:user_id]) %>
+			<%= button_to "Report Winner", edit_battle_path(battle), :method => :get %>
+		<% else %>
+			<%= battle.team_winner_to_s %>
+		<% end %>
+	</div>
 </div>
