--- a/app/views/battles/edit.html.erb
+++ b/app/views/battles/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing battle</h1>
+<h1>Report Winner</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @battle %> |
-<%= link_to 'Back', battles_path %>
