cleaned up map view. gave planets better names.

--- a/app/views/maps/_map.html.erb
+++ b/app/views/maps/_map.html.erb
@@ -3,7 +3,7 @@
 <table width="512px" height="512px" background="/images/starfieldgrid512.png">
 <tr>
 <% for element in grid %>
-	<td>
+	<td width="64px" >
 	<% if element %>
 		<% if element.has_multiple_teams_present? %>
 			<img src="/images/conflictplanet64.png" width="80%">
