ready for testing, but the match layout sucks

--- a/app/views/maps/_map.html.erb
+++ b/app/views/maps/_map.html.erb
@@ -17,7 +17,7 @@
 			<img src="/images/whiteplanet64.png" width="80%">
 		<% end %>
 		<br />
-		<span style="color: white"><%= element.name %></span>
+		<span style="color: white; font-size:9pt"><%= element.name %></span>
 	<% end %>
 	</td>
 	<% x += 1 %>
