--- a/app/views/battles/_battle.html.erb
+++ b/app/views/battles/_battle.html.erb
@@ -1,8 +1,14 @@
-<% players = battle.get_all_participants %>
+<hr>
+<% teams = battle.get_all_participants %>
 <div id="battle[<%= battle_counter %>]" class="<%= battle_counter.odd? ? 'oddline' : 'evenline' %>">
-	<div style="width: 125px; float: left;"><%= players[0] %></div>
-	<div style="width: 125px; float: left;"><%= players[1] %></div>
-	<div style="width: 150px; float: left;">
+	<% teams.each do |team| %>
+		<div style="width: 200px; float: left;">
+			<% team.each do |player| %>
+				<%= player %>
+			<% end %>			
+		</div>
+	<% end %>
+	<div style="width: 100px; float: left;">
 		<% if !battle.team_winner_id %>
 			<% if battle.is_user_allowed_to_report_winner(session[:user_id]) %>
 				<%= button_to "Report Winner", edit_battle_path(battle), :method => :get %>
@@ -13,4 +19,8 @@
 			<%= battle.team_winner_to_s %>
 		<% end %>
 	</div>
+	<br />
 </div>
+
+
+
