--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,15 @@
 
 <h1>Battlefork</h1>
 
+<fieldset id="layout_fieldset">
+	<legend>Control Panel</legend>
 <% if session[:user_id] %>
 Logged in as: <%= User.find(session[:user_id]).username %><br />
 <%= link_to "My Profile", user_path(User.find(session[:user_id])) %> | <%= link_to "Logout", logout_path, :method => :delete %>
 <% else %>
 <%= link_to "Login", login_path %>
 <% end %>
+</fieldset>
 
 <%= yield %>
 
